Ignore animated movies destined for talks, and raw HST data from the Bedin et al. 2017 paper supplementary data file

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,8 @@ dmypy.json
 # Custom changes for this project:
 .envrc
 data/TESS/
+data/HST/
 figures/
 # autogenerate with `make`
 proposal/2021A/DDT/tess_luhman16/final
+talks/
