Require bokeh less than 2.3 due to a bug that impacts lightkurve interact

--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - pandas
   - lightkurve >2.0
   - oktopus # from conda-forge channel
-  - bokeh
+  - bokeh<2.3
   - jupyter
   - anaconda
   - celerite
